--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8080
 spring.application.name=Attendance-System-api
 
-spring.datasource.url=jdbc:mysql://localhost:3307/Attendance_System?useSSL=false&serverTimezone=Asia/Taipei
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/Attendance_System?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Taipei
 spring.datasource.username=user
 spring.datasource.password=user123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.show-sql=true
 
 springdoc.api-docs.path=/v3/api-docs
