--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.application.name=Attendance-System-api
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/Attendance_System?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Taipei
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Taipei
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,7 +21,7 @@ logging.level.com.tsmc.cloudnative=DEBUG
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400
 
-# ????????????GCS
+# Comment out the local file path and use GCS instead.
 #file.upload-dir=C:/Users/junting/Desktop/Attendance-System-upload
 gcs.bucket-name=${GCS_BUCKET_NAME}
 spring.servlet.multipart.max-file-size=10MB
