--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,10 @@ server.error.include-binding-errors=always
 
 #logging.level.root=DEBUG
 logging.level.com.tsmc.cloudnative=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=86400
