--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,8 @@ spring.datasource.password=${DB_PASS}
 jwt.secret=${JWT_SECRET}
 
 gcs.bucket-name=${GCS_BUCKET_NAME}
+
+# Enable HTTPS redirection only in the production environment.
+server.forward-headers-strategy=framework
+springdoc.swagger-ui.urls[0].url=/v3/api-docs
+springdoc.swagger-ui.urls[0].name=API Documentation
