--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+
+jwt.secret=${JWT_SECRET}
