--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
             <artifactId>mysql-socket-factory-connector-j-8</artifactId>
             <version>1.24.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
 
 
     </dependencies>
