--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,13 @@ jobs:
           distribution: "temurin"
 
       - name: Build and run tests
-        run: mvn clean ve
+        run: mvn clean verify
 
       - name: Generate Jacoco report
         run: mvn jacoco:report
 
       - name: Upload Jacoco report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
           path: target/site/jacoco
